# FTCTui

./: .gitignore  Cargo.toml  README.md  build.rs  configuration-device-types.json  create_appdir.sh  perf.data.old  robot-configuration-22903-27-02-26-recreated.xml  robot-configuration-22903-27-02-26.xml
.github/workflows/: build.yml  release.yml
src/: app.rs  command.rs  fs.rs  gamepad_map.rs  input.rs  main.rs  match.rs  network.rs  popup.rs  robot.rs  settings.rs  tty.rs
src/ftc_dashboard/: gamepad_state.rs  message.rs  mod.rs  robot_status.rs  telemetry_packet.rs
src/ftc_proto/: command_packet.rs  gamepad_packet.rs  heartbeat_packet.rs  mod.rs  packet.rs  robot_command.rs  telemetry_packet.rs  time_packet.rs  traits.rs
src/ftc_proto/hardware/: device.rs  document.rs  lynx.rs  mod.rs  robot.rs  test-bin.rs
src/renderers/: debug.rs  gamepads.rs  hardware_configuration.rs  mod.rs  opmode.rs  popup.rs  robot.rs  styles.rs
src/renderers/hardware_configuration/: editing.rs  in_menu.rs  mod.rs
