[package]
name = "ftctui"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.0"
color-eyre = "0.6.3"
futures = "0.3.31"
gilrs = "0.11.0"
log = "0.4.27"
num_enum = "0.7.3"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
simplelog = "0.12.2"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = "0.26.2"
tui-input = "0.11.1"
