[package]
name = "ftctui"
version = "0.1.0-beta1"
edition = "2024"

[dependencies]
bitflags = "2.9.0"
clap = { version = "4.5", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }

color-eyre = "0.6.3"
fon = "0.6.0"
futures = "0.3.31"

lazy_static = "1.5.0"
log = "0.4.27"
num_enum = "0.7.3"
pasts = "0.14.3"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
simplelog = "0.12.2"
tokio = { version = "1.44.2", features = ["full"] }
tui-input = "0.11.1"
wavy = "0.9.1"

[dependencies.gilrs]
git = "https://gitlab.com/gilrs-project/gilrs.git"
#version = "0.11.0"
default-features=false
features = ["serde-serialize", "xinput"]

[build-dependencies]
winresource = "0.1.22"


