[package]
name = "ftctui"
version = "0.1.2-public-beta"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
async-lock = "3.4.0"
bitflags = "2.9.0"
cfg-if = "1.0.1"
clap = { version = "4.5", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }

color-eyre = "0.6.3"
fon = "0.6.0"
futures = "0.3.31"

lazy_static = "1.5.0"
log = "0.4.27"
num_enum = "0.7.3"
pasts = "0.14.3"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
simplelog = "0.12.2"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
tui-input = "0.11.1"
wavy = "0.9.1"

[dependencies.gilrs]
version = "0.11.0"
default-features=false
features = ["serde-serialize", "xinput"]

[build-dependencies]
winresource = "0.1.22"


